[gd_scene load_steps=10 format=1]

[ext_resource path="res://game/scenes/level1/assets/tileset/asphalt_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://game/scenes/common/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/scenes/common/TestScenes/TilePlacement/TilePlacement.gd" type="Script" id=3]
[ext_resource path="res://game/scenes/common/TestScenes/TilePlacement/EventTrigger.gd" type="Script" id=4]
[ext_resource path="res://game/scenes/common/assets/event.smp" type="Sample" id=5]
[ext_resource path="res://game/scenes/common/assets/rumore.smp" type="Sample" id=6]
[ext_resource path="res://game/scenes/common/assets/warning_normal.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 43, 16 )

[sub_resource type="SampleLibrary" id=2]

samples/event = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/rumore = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}

[node name="TilePlacement" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 1 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 262144, 42, 262145, 42, 262146, 42, 262147, 42, 262148, 42, 262149, 42, 262150, 42, 262151, 42, 262152, 1, 262153, 42, 262154, 42, 262155, 42, 262156, 42, 262157, 42, 262158, 42, 262159, 42, 262160, 42, 262161, 42, 262162, 42, 262163, 42, 262164, 42, 327680, 13, 327681, 13, 327682, 13, 327683, 13, 327684, 13, 327685, 13, 327686, 13, 327687, 13, 327688, 27, 327689, 29, 327690, 29, 327691, 29, 327692, 29, 327693, 29, 327694, 29, 327695, 29, 327696, 13, 327697, 13, 327698, 13, 327699, 13, 327700, 13, 393216, 13, 393217, 13, 393218, 13, 393219, 13, 393220, 13, 393221, 13, 393222, 13, 393223, 13, 393224, 28, 393225, 30, 393226, 30, 393227, 30, 393228, 30, 393229, 30, 393230, 30, 393231, 30 )

[node name="Player" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 271, 136 )

[node name="TilePlacement" type="Node" parent="."]

script/script = ExtResource( 3 )

[node name="EventTrigger" type="Node2D" parent="."]

transform/pos = Vector2( 543, 261 )
script/script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="EventTrigger"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EventTrigger/Area2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="EventTrigger"]

params/volume_db = -20.0

params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 2 )
config/pitch_random = 0.0

[node name="EventIcon" type="Sprite" parent="EventTrigger"]

transform/pos = Vector2( -3, -95 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 564.0
margin/top = 134.0
margin/right = 692.0
margin/bottom = 148.0
text = "Press \"E\" to interact"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="body_enter" from="EventTrigger/Area2D" to="EventTrigger" method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="EventTrigger/Area2D" to="EventTrigger" method="_on_Area2D_body_exit"]


